fix: decouple entrypoint sync events from data planes
Fan entrypoint events out to all gateways to avoid the category error of filtering by data plane.
Warm entrypoints cache per ennvironment on gateway startup to self-heal domain startup.
Reconcile entrypoints on cloud ENVIRONMENT commands to avoid deletion/recreation churn.

AM-7601